--- a/Pymaceuticals/Pymaceuticals_mycode.ipynb
+++ b/Pymaceuticals/Pymaceuticals_mycode.ipynb
@@ -430,7 +430,7 @@
    "source": [
     "# Generate a bar plot showing Timepoints for each drug regimen.\n",
     "\n",
-    "\n",
+    "# Grouping by drugs\n",
     "timepoint_count = clean_data_df.groupby(\"Drug Regimen\").count()[\"Timepoint\"].sort_values(ascending=False)\n",
     "\n",
     "# Determine x & y axis\n",
@@ -439,6 +439,7 @@
     "\n",
     "# Making a bar chart using pyplot\n",
     "plt.bar(x_axis, y_axis, align=\"center\")\n",
+    "\n",
     "# Sets the x limits of the current chart\n",
     "plt.xlim(-1, len(x_axis)-0.25)\n",
     "plt.xticks(rotation=90)\n",
@@ -534,13 +535,6 @@
     "# Generate a pie plot showing the distribution of female versus male mice using pandas\n",
     "sex_count.plot(kind='pie', autopct=\"%1.1f%%\", ylabel=\"Sex\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -905,15 +899,20 @@
     "\n",
     "# Grouping by mouse id\n",
     "mouse_grouped = Capomulin_df.groupby([\"Mouse ID\"])\n",
+    "\n",
     "# Get avg tumor volume of all mice from grouped data\n",
     "avg_tumor = mouse_grouped[\"Tumor Volume (mm3)\"].mean()\n",
+    "\n",
     "# Get weight of all mice from grouped data\n",
     "mouse_weight = mouse_grouped.first()[\"Weight (g)\"]\n",
+    "\n",
     "# Reset data to make it dataframe\n",
     "avg_tumor_df = avg_tumor.reset_index()\n",
     "mouse_weight_df = mouse_weight.reset_index()\n",
+    "\n",
     "# Merging the two dataframes\n",
     "weight_avgtumor = mouse_weight_df.merge(avg_tumor_df, on=\"Mouse ID\", how=\"left\")\n",
+    "\n",
     "# Generating scatter plot using pandas\n",
     "weight_avgtumor.plot(kind=\"scatter\", x=\"Weight (g)\", y=\"Tumor Volume (mm3)\", ylabel=\"Tumor Volume (mm3) Avg\")\n"
    ]
@@ -968,6 +967,7 @@
     "correlation = st.pearsonr(weight, volume)\n",
     "print(f\"The correlation between mouse weight and the average tumor volume is {round(correlation[0],2)}\")\n",
     "\n",
+    "# Getting the regression line\n",
     "weight_avgtumor.plot(kind=\"scatter\", x=\"Weight (g)\", y=\"Tumor Volume (mm3)\", ylabel=\"Tumor Volume (mm3) Avg\")\n",
     "m, b = np.polyfit(weight, volume, 1)\n",
     "plt.plot(weight, m*weight+b, color='red', label='y={:.2f}x+{:.2f}'.format(m,b))\n"
